--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,19 +1,18 @@
 <resources>
-    <string name="app_name">GK</string>
-    <string name="title_activity_detail">DetailActivity</string>
-    <string name="tab_gank_android">Android</string>
-    <string name="tab_gank_ios">IOS</string>
-    <string name="tab_gank_recommend">推荐</string>
-    <string name="tab_gank_girl">福利</string>
-    <string name="title_activity_main2">Main2Activity</string>
-
+    <string name="app_name">Gank</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Settings</string>
     <string name="api_url">http://gank.io/api/</string>
     <string name="hint_search_content">请输入你要什么</string>
     <string name="hint_loading_more">加载更多</string>
     <string name="hint_loading_no_more">没有更多内容 *-*</string>
     <string name="search">搜索</string>
+
+    <!--menu-->
+    <string name="action_layout">linear</string>
+    <string name="action_search">action_search</string>
+    <string name="layout_grid">grid</string>
+    <string name="layout_linear">linear</string>
+    <string name="empty">没有内容</string>
 </resources>
